roles/ocp4_workload_ocp_troubleshooting_workshop/files/workloads/01-configuration/1.1-missing-configmap/broken/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-1-1-svc
  labels:
    app: lab-1-1-app
    demo.redhat.com/name: ocp-troubleshooting-workshop
spec:
  selector:
    app: lab-1-1-app
  ports:
  - port: 8080
    targetPort: 8080
